<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/movie_image_description"
            app:layout_constraintBottom_toTopOf="@+id/tv_movie_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_title_background"
            tools:src="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/iv_title_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/black_gradient"
            android:contentDescription="@string/movie_title_description"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_title" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_movie_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/info_size"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/tv_movie_average"
            app:layout_constraintLeft_toLeftOf="@id/iv_movie_poster"
            app:layout_constraintStart_toStartOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
            tools:text="@string/dummy_date" />

        <TextView
            android:id="@+id/tv_movie_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/rb_movie_average"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_date"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_date"
            tools:text="@string/dummy_average" />

        <RatingBar
            android:id="@+id/rb_movie_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:max="@integer/max_movie_score"
            android:progress="@integer/increment_value"
            app:layout_constraintBottom_toTopOf="@id/tv_movie_plot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_average" />

        <TextView
            android:id="@+id/tv_movie_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_movie_average"
            tools:text="@string/dummy_text" />

     </android.support.constraint.ConstraintLayout>

</ScrollView>